@@ -95,6 +95,9 @@ Only display memory attributes.
 All of them are displayed (while the default textual output selects
 memory attribute details depending on the verbosity level).
 .TP
+\fB\-\-cpukinds\fR
+Only display CPU kinds.
+.TP
 \fB\-f\fR \fB\-\-force\fR
 If the destination file already exists, overwrite it.
 .TP
